--- a/content.yaml
+++ b/content.yaml
@@ -1,6 +1,6 @@
-# Comment désactiver les collisions sur roblox studio ?
+# Comment désactiver les collisions entre les joueurs sur Roblox Studio ?
 
-- title: Comment désactiver les collisions sur roblox studio ?
+- title: Comment désactiver les collisions entre les joueurs sur Roblox Studio ?
   img: images/roblox.png
   category: Roblox Studio
   description: >
@@ -15,16 +15,53 @@
       title: Script
       language: lua-language
       value: |
-        local PlayerService = game:GetService("Players")
-        PlayerService.PlayerAdded:Connect(function(player)
-          player.CharacterAdded:Connect(function(character)
-            for _, child in pairs(character:GetDescendants()) do
-              if child:IsA("BasePart") then
-                child.CollisionGroup = "PlayerPart"
-              end
-            end
-          end)
-        end)
+        local PhysicsService = game:GetService("PhysicsService")
+        local Players = game:GetService("Players")
+
+        local playerCollisionGroupName = "Players"
+        PhysicsService:CreateCollisionGroup(playerCollisionGroupName)
+        PhysicsService:CollisionGroupSetCollidable(playerCollisionGroupName, playerCollisionGroupName, false)
+
+        local previousCollisionGroups = {}
+
+        local function setCollisionGroup(object)
+          if object:IsA("BasePart") then
+            previousCollisionGroups[object] = object.CollisionGroupId
+            PhysicsService:SetPartCollisionGroup(object, playerCollisionGroupName)
+          end
+        end
+
+        local function setCollisionGroupRecursive(object)
+          setCollisionGroup(object)
+
+          for _, child in ipairs(object:GetChildren()) do
+            setCollisionGroupRecursive(child)
+          end
+        end
+
+        local function resetCollisionGroup(object)
+          local previousCollisionGroupId = previousCollisionGroups[object]
+          if not previousCollisionGroupId then return end 
+
+          local previousCollisionGroupName = PhysicsService:GetCollisionGroupName(previousCollisionGroupId)
+          if not previousCollisionGroupName then return end
+
+          PhysicsService:SetPartCollisionGroup(object, previousCollisionGroupName)
+          previousCollisionGroups[object] = nil
+        end
+
+        local function onCharacterAdded(character)
+          setCollisionGroupRecursive(character)
+
+          character.DescendantAdded:Connect(setCollisionGroup)
+          character.DescendantRemoving:Connect(resetCollisionGroup)
+        end
+
+        local function onPlayerAdded(player)
+          player.CharacterAdded:Connect(onCharacterAdded)
+        end
+
+        Players.PlayerAdded:Connect(onPlayerAdded)
 
 # Comment afficher les FPS sur Roblox Studio
 
