--- a/content.yaml
+++ b/content.yaml
@@ -1,7 +1,7 @@
 # Comment désactiver les collisions entre les joueurs sur Roblox Studio ?
 
-- title: Comment désactiver les collisions entre les joueurs sur Roblox Studio ?
-  img: images/roblox.png
+- title: Comment désactiver les collisions entre les joueurs sur Roblox Studio?
+  img: images/robloxstudio.jpg
   category: Roblox Studio
   description: >
     Lorsque plusieurs joueurs se retrouvent dans un même jeu Roblox, leurs avatars peuvent se heurter les uns aux autres.
@@ -65,8 +65,8 @@
 
 # Comment afficher les FPS sur Roblox Studio
 
-- title: Comment afficher les FPS sur Roblox Studio
-  img: images/roblox.png
+- title: Comment afficher les FPS sur Roblox Studio?
+  img: images/robloxstudio.jpg
   category: Roblox Studio
   description: >
     Lorsque l’on développe un jeu sur Roblox Studio, il est essentiel de surveiller
