--- a/content.yaml
+++ b/content.yaml
@@ -11,7 +11,7 @@
     Heureusement, Roblox Studio permet de désactiver facilement les collisions entre les joueurs.
     Cette fonctionnalité permet d’éviter que les joueurs ne se bloquent ou se gênent involontairement.
     Dans cet article, nous allons voir comment désactiver les collisions entre les avatars, pas à pas, pour offrir une expérience plus fluide et agréable à tous les joueurs.
-  link: n
+  link: https://www.youtube.com/embed/RkKBEi_DvvI
   content:
     - type: code
       title: Script
